# torchbase

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE-INTERNATIONAL  Makefile  README.md  environment.yaml  minhash_allele_calling.py  pyproject.toml  setup.cfg
.github/workflows/: test-pr-features.yml  test-wdl.yml
docs/: PRD-MLST-Implementation.md  installation.rst  overview.rst
docs/adr/: 0001-mlst-multi-scheme-architecture.md  0002-migration-wizard-design.md
docs/proposals/: openmlst-torchbase-proposal.md
examples/multi_organism/1.0.0.torch/: metadata.toml
examples/multi_organism/1.0.0.torch/schemes/ecoli/: profiles.tsv
examples/multi_organism/1.0.0.torch/schemes/ecoli/alleles/: fumC.fasta  icd.fasta  mdh.fasta
examples/multi_organism/1.0.0.torch/schemes/salmonella/: profiles.tsv
examples/multi_organism/1.0.0.torch/schemes/salmonella/alleles/: adk.fasta  gyrB.fasta  purA.fasta
examples/simple_mlst/1.0.0.torch/: metadata.toml  profiles.tsv
examples/simple_mlst/1.0.0.torch/_resources/: adk.fasta  fumC.fasta  gyrB.fasta
torchbase/: __init__.py  cli.py  config.py  registry.py  torchbase.py  torchfs.py  workflow_filters.py  workflow_inspect.py
torchbase/.github/workflows/: test_torchbase.yml
torchbase/conversions/: bigsdb_client.py  pubmlst.py
torchbase/quality/: __init__.py  kmer_analysis.py  report.py
torchbase/templates/shigatyper/: shigatyper.wdl
torchbase/tests/: __init__.py  bigsdb_fixture.py  conftest.py  test_alignment_fallback.py  test_auto_strategy.py  test_balanced_typing_workflow.py  test_bigsdb_client.py  test_cli_pin.py  test_cli_strategy_routing.py  test_fast_typing_workflow.py  test_kmer_analysis.py  test_minhash_allele_calling.py  test_mlst_workflow_orchestration.py  test_multi_scheme_concatenation.py  test_multi_scheme_conversion.py  test_multi_scheme_torch.py  test_profile_lookup_wdl.py  test_pubmlst_conversion.py  test_quality_report.py  test_registry.py  test_registry_config.py  test_sensitive_typing_workflow.py  test_shared_wdl_tasks.py  test_shigatyper_conversion.py  test_suspect_data_workflow_flags.py  test_synthetic_example_torches.py  test_torchbase.py  test_workflow_discovery.py  test_workflow_inspect.py  test_workflow_torch.py
torchbase/workflows/: alignment_fallback.wdl  minhash_allele_calling.wdl
torchbase/workflows/builtin/: balanced_typing.wdl  fast_typing.wdl  sensitive_typing.wdl
torchbase/workflows/builtin/tasks/: alignment.wdl  filter_alleles.wdl  minhash.wdl  profile_lookup.wdl
torchbase/workflows/mlst/1.0.0.torch/: main.wdl  metadata.toml  profiles.tsv
torchbase/workflows/mlst/1.0.0.torch/_resources/: metadata.json  reference_alleles.fasta
(+2 files in other folders)
