[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchbase"
version = "0.2.0"
description = "Python framework for microbial typing by reference."
readme = "README.md"
license = {text = "US Government Work Product"}
authors = [
    {name = "Justin Payne", email = "crashfrog@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Click~=8.1.3",
    "cookiecutter~=2.1.1",
    "zstandard~=0.20.0",
    "miniwdl~=1.8.0",
    "toml~=0.10.2",
    "tabulate~=0.9.0",
    "jellyfish~=1.0.0",
]

[project.optional-dependencies]
dev = [
    "configparser",
    "pytest",
    "hypothesis",
    "black",
    "flake8",
    "sphinx",
    "tox",
    "twine",
    "coverage",
    "zest.releaser",
]
test = [
    "pytest",
    "pytest-runner",
]

[project.urls]
Homepage = "https://github.com/crashfrog/torchbase.git"

[project.scripts]
torchbase = "torchbase.cli:cli"
torchtools = "torchbase.cli:tools"

[tool.setuptools]
packages = ["torchbase"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]

[tool.pytest.ini_options]
markers = [
    "miniwdl: tests requiring miniwdl and Docker (skipped unless CI=true)",
]
addopts = "-m 'not miniwdl' --tb=short"
