[metadata]
name = torchbase
version = 0.2.0
description = Python framework for microbial typing by reference.
long_description = file: README.md, LICENSE, LICENSE-INTERNATIONAL
license = US Government Work Product
license_files = file: LICENSE, LICENSE-INTERNATIONAL
classifiers = 
    Programming Language :: Python :: 3
url = https://github.com/crashfrog/torchbase.git
author = Justin Payne
author_email = crashfrog@gmail.com

[options]
package_dir = 
    = torchbase
packages = find:
install_requires =
    Click ~= 8.1.3
    cookiecutter ~= 2.1.1
    zstd ~= 1.5.2.6
    miniwdl ~= 1.8.0
    ipfspy ~= 0.0.15
    python_version > "3.7"
test_suite = tests


[options.packages.find]
where = torchbase
exclude = 
    docs*
    torchbase.tests*

[options.entry_points]
console_scripts =
    torchbase = cli:cli
    torchtools = cli:tools


[options.package_data]
* = *.txt, *.rst

[options.extras_require]
dev = 
    configparser
    pytest
    hypothesis
    black
    flake8
    sphinx
    tox
    twine
    coverage
    zest.releaser
test =
    pytest
    pytest-runner

